--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@
       <!-- Start footer --> 
        <footer>
         <div class="container">
-          <img src="../Kasper Project/images/logo.png" alt="logo">
+          <img src="Kasper Project/images/logo.png" alt="logo">
           <p>we are social</p>
             <div class="icons">
               <i class="fab fa-facebook-f"></i>
